# MSbotFE

./: tip_jar.sol
backend/: Cargo.toml  vercel.json
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.jsx  index.css  index.js
msbotbackend/: Cargo.toml
msbotbackend/src/: main.rs
mstbotfrontend/: package-lock.json  package.json  webpack.config.js
mstbotfrontend/public/: index.html
mstbotfrontend/src/: App.css  App.js
